--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.5.3",
     "react-select": "^5.10.1"
