--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@types/react-select": "^5.0.0",
+    "critters": "^0.0.23",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18.2.0",
