--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-select": "^5.0.0",
     "critters": "^0.0.23",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
+    "next": "^14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.2",
@@ -29,11 +29,11 @@
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   }
 }
