--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-select": "^5.0.0",
     "critters": "^0.0.23",
     "framer-motion": "^11.0.3",
+    "gh-pages": "^6.3.0",
     "next": "^14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
